--- a/ACOTIN_POS_APPLICATION/Properties/Resources.resx
+++ b/ACOTIN_POS_APPLICATION/Properties/Resources.resx
@@ -148,4 +148,7 @@
   <data name="Saved" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Saved1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="fcaasc" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\fcaasc.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
